// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Progress renders correctly 1`] = `
<jest>
  <div
    class="progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar"
      role="progressbar"
      style="width: 25%"
    >
      25%
    </div>
  </div>
</jest>
`;

exports[`OE - Progress renders correctly with striped and animated style 1`] = `
<jest>
  <div
    class="progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar progress-bar-striped progress-bar-animated"
      role="progressbar"
      style="width: 25%"
    >
      25%
    </div>
  </div>
</jest>
`;

exports[`OE - Progress renders correctly with striped style 1`] = `
<jest>
  <div
    class="progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar progress-bar-striped"
      role="progressbar"
      style="width: 25%"
    >
      25%
    </div>
  </div>
</jest>
`;

exports[`OE - Progress renders correctly with variant danger 1`] = `
<jest>
  <div
    class="progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar bg-danger"
      role="progressbar"
      style="width: 25%"
    >
      25%
    </div>
  </div>
</jest>
`;
